syntax = "proto3";

package sync;

import "google/protobuf/timestamp.proto";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message CacheEntry {
    uint32 mode = 1;
    google.protobuf.Timestamp modificationTime = 2 [(gogoproto.stdtime) = true];
    uint64 size = 3;
    bytes digest = 4;
}

message Cache {
    map<string, CacheEntry> entries = 1;
}
